--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: [Gourav Sharma Portfolio]
 description: [A leaner]
-logo: "https://github.com/Gourav9042/Gourav-Sharma-Portfolio/blob/master/0.jpg"
 description : > Gourav sharma
+theme: jekyll-theme-cayman
