--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-title: [Gourav Sharma Portfolio]
-description: [A leaner]
+title: [Data Science Portfolio]
+description: [Hi! My name is Gourav Sharma]
+social-network-links:
+  email: "gourav9042@live.com"
+ 
 theme: jekyll-theme-cayman
