--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: [Data Science Portfolio]
 description: [Hi! My name is Gourav Sharma]
-social-network-links:
-  email: "gourav9042@live.com"
+![Gourav sharma](0.jpg)
  
 theme: jekyll-theme-cayman
