--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: [Data Science Portfolio]
 description: [Hi! My name is Gourav Sharma]
 ![Gourav sharma](0.jpg)
+enail:  "gourav9042@live.com"
  
-theme: jekyll-theme-cayman
+theme: uswds-jekyll
+site_width: wide
