--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: [Data Science Portfolio]
 description: [Hi! My name is Gourav Sharma]
 ![Gourav sharma](0.jpg)
-enail:  "gourav9042@live.com"
+email:  "gourav9042@live.com"
  
 theme: uswds-jekyll
 site_width: wide
