--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,5 @@ title: [Data Science Portfolio]
 description: [Hi! My name is Gourav Sharma]
 ![Gourav sharma](0.jpg)
 email:  "gourav9042@live.com"
- 
-theme: uswds-jekyll
-site_width: wide
+theme: jekyll-theme-cayman
+
