Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: [Data Science Portfolio]
 description: [Hi! My name is Gourav Sharma]
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 
